# friendly-traceback

./: .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  READMES.md  ae.bat  check.bat  dev-notes.md  pypi_upload.bat  pyproject.toml  pytest.ini  requirements-dev-github.txt  requirements-dev.txt  requirements.txt  run_all_tests.bat  run_cover.bat  setup.cfg  setup.py  tox.ini  update_docs.bat  upgrade_all.bat
.github/workflows/: codeql-analysis.yml  full_tests.yml
friendly/: __init__.py  __main__.py  config.py  console.py  core.py  path_info.py
friendly_traceback/: __init__.py  __main__.py  about_warnings.py  base_formatters.py  config.py  console.py  console_helpers.py  core.py  debug_helper.py  devtools_patch.py  editors_helpers.py  formatters.py  frame_info.py  ft_console.py  ft_gettext.py  functions_help.py  info_generic.py  info_specific.py  info_variables.py  message_parser.py  path_info.py  py.typed  source_cache.py  tb_data.py  token_utils.py  typing.py  typing_info.py  utils.py
friendly_traceback/locales/: friendly.pot  friendly_tb.pot
friendly_traceback/runtime_errors/: _attribute_getter.py  attribute_error.py  file_not_found_error.py  import_error.py  index_error.py  key_error.py  module_not_found_error.py  modules_attributes.py  name_error.py  os_error.py  runtime_error.py  stdlib_modules.py  third_party_names.py  type_error.py  unbound_local_error.py  value_error.py  zero_division_error.py
friendly_traceback/syntax_errors/: analyze_syntax.py  error_in_def.py  fixers.py  indentation_error.py  message_analyzer.py  source_info.py  statement_analyzer.py  syntax_utils.py
tests/: __init__.py  compare_messages.py  syntax_errors_descriptions.py  syntax_errors_formatting_cases.py  trb_common.py  trb_english.py  trb_english_markdown.py  trb_french.py  trb_hebrew.py  trb_italian.py  trb_russian.py  trb_spanish.py  trb_syntax_common.py  trb_syntax_english.py  trb_syntax_french.py  trb_syntax_hebrew.py  trb_syntax_italian.py  trb_syntax_markdown.py  trb_syntax_russian.py  trb_syntax_spanish.py  trb_syntax_tamil.py  trb_tamil.py  unclosed.txt  unterminated.txt  what.py
(+123 files in other folders)
