[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["friendly_traceback"]
mypy_path = ["_typeshed"]
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true

[tool.isort]
profile = "black"
known_first_party = ["friendly", "friendly_traceback"]
known_third_party = ["asttokens", "executing", "pure_eval", "stack_data", "appdirs"]
