[metadata]
name = friendly_traceback
version = attr: friendly_traceback.__version__
description = Friendlier tracebacks in any language.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: French
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Education
    Topic :: Education
    Topic :: Software Development :: Interpreters
url = https://github.com/friendly-traceback/friendly-traceback
author = Andre Roberge
author_email = Andre.Roberge@gmail.com

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
zip_safe = False
install_requires =
    asttokens >= 2.0.4
    executing >= 0.7.0
    pure_eval >= 0.2.1
    stack_data >= 0.1.0

[options.packages.find]
exclude =
    dist
    build
    tools
    demos
    tests
    tests.*
    *.tests
    *.tests.*

[options.package_data]
* =
    friendly_traceback/locales/*
friendly_traceback = py.typed
